components/layout/main-nav.module.css
.header {
    position: sticky;
    top: 0;
    width: 100vw;
    height: 5.5rem;
    background-color: rgba(2, 111, 2, 0.767); 
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0;
    z-index: 100;
    box-shadow: 5px 5px 10px rgba(0, 0, 4, 0.714);
    }
 
  .header ul {
    list-style: none;
    display: flex;
    align-items: baseline;
    padding: 0;
  }
  
  .header .icon {
    color: white; 
    padding: 3px;
    padding-top: 5px;
    font-weight: bold;
  }

  .header .recipes {
    letter-spacing: 0.1rem;
    font-weight: 400;
  }
  
  .header .logo{
    position: relative;
    bottom: 20px;
    right: 20px;
    left: 10px;
      }

  .header li {
    margin: 0 var(--size-4);
    position: relative;
    left: 5px;
  }
  
  .header a {
    color: white; 
    font-size: var(--size-5);
    text-decoration: none; 
  }
  
  .header a:hover,
  .header a:active,
  .header a.active {
    color: var(--color-primary-700);
    font-weight: bold;
  }
  
  @media (max-width: 767px) {
    .header {
      background-color: green; 
      z-index: 100;
    }
  
    .header ul {
      display: none;
      flex-direction: column;
      position: absolute;
      top: 6rem;
      left: 0;
      background-color: green;
      width: 100%;
    }
  
    .header ul.active {
      display: flex;
    }
  
    .header li {
      margin: 0;
      padding: 1rem;
    }
  
    .header a {
      color: white;
      font-size: var(--size-5);
    }
  
    .header a:hover,
    .header a:active,
    .header a.active {
      color: var(--color-grey-50);
    }
  }
  
  @media (min-width: 768px) {
    .header ul {
      gap: 0.5rem;
    }
  
  }
  

